kanc/src/tests/sample_code/should_fail/single_file/bind/ref_fun_in_return_type.ph
type U {}

let f = fun g(a: Type): g(U) { a };
